--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,12 @@ name: local-mysql
 
 services:
   database:
+    container_name: database
     image: arm64v8/mysql:8
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    networks:
+      - local-mysql-network
     ports:
         - 3306:3306
     volumes:
@@ -13,8 +16,11 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
   adminer:
+    container_name: adminer
     image: arm64v8/adminer:latest
     restart: always
+    networks:
+      - local-mysql-network
     ports:
       - 2035:8080
     environment:
@@ -24,3 +30,7 @@ services:
 
 volumes:
   db_data:
+
+networks:
+  local-mysql-network:
+    driver: bridge
